--- a/CodeSchool/app/index.html
+++ b/CodeSchool/app/index.html
@@ -2,16 +2,73 @@
 <html ng-app="gemStore"> <!-- Directive -->
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 <body ng-controller="StoreController as store">
+    
     <p>{{"Hello" + " - " + "Angular"}}</p> <!--Expression--> 
-    <div ng-repeat="product in store.products" ng-hide="product.soldOut">
+    <div ng-repeat="product in store.products | limitTo:4 | orderBy:'-price'" ng-hide="product.soldOut">
         <h1>{{product.name}}</h1>
-        <h2>${{product.price}}</h2>
-        <p>{{product.description}}</p>
-        <button ng-show="product.canPurchase"> Add to Cart </button>
+        <section ng-controller="PanelController as panel">
+            <ul class ="nav nav-pills">
+                <li ng-class="{ active:panel.isSelected(1) }"> <a href ng-click="panel.selectTab(1)">Description</a> </li>
+                <li ng-class="{ active:panel.isSelected(2) }"> <a href ng-click="panel.selectTab(2)">Specifications</a> </li>
+                <li ng-class="{ active:panel.isSelected(3) }"> <a href ng-click="panel.selectTab(3)">Reviews</a> </li>
+            </ul>
+            <div class="panel" ng-show="panel.isSelected(1)">
+                <h4>Description</h4>
+                <p>{{product.description}}</p>
+                <h2>{{product.price | currency}}</h2> <!--Pipe - Take the input of first impression and send it to the second pipe-->
+                <img ng-show="product.images.length" ng-src="{{product.images[0]}}" />
+            </div>
+            <div class="panel" ng-show="panel.isSelected(2)">
+                <h4>Specifications</h4>
+                <blockquote>None yet</blockquote>
+            </div>
+            <div class="panel" ng-show="panel.isSelected(3)">
+                <h4>Reviews</h4>
+                <blockquote>
+                    <!--Review Data-->
+                    <li ng-repeat="review in product.reviews">
+                    <blockquote>
+                      <strong>{{review.stars}} Stars</strong>
+                      {{review.body}}
+                      <cite class="clearfix">—{{review.author}} on {{ review.createdOn | date:'MM/dd/yyyy @ h:mma'}}</cite>
+                    </blockquote>
+                  </li>
+                    <!--Review Form-->
+                    <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
+                        <blockquote>
+                            <b>Stars: {{reviewCtrl.review.stars}}</b>
+                            {{reviewCtrl.review.body}}
+                            <cite class="clearfix">by: {{reviewCtrl.review.author}} on {{ reviewCtrl.review.createdOn | date:'MM/dd/yyyy @ h:mma'}}</cite>
+                        </blockquote>
+                        <!--  Review Form -->
+                          <h4>Submit a Review</h4>
+                          <fieldset class="form-group">
+                            <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" required>
+                              <option value="">Rate the Product</option>
+                            </select>
+                          </fieldset>
+                          <fieldset class="form-group">
+                            <textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
+                          </fieldset>
+                          <fieldset class="form-group">
+                            <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" required />
+                          </fieldset>
+                          <fieldset class="form-group">
+                            <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
+                          </fieldset>
+                    </form>
+                </blockquote>
+            </div>
+            <button ng-show="product.canPurchase"> Add to Cart </button>
+        </section>
+    </div>
+    <div>
+        <p>{{'1388123412323' | date:'MM/dd/yyyy @ h:mma' }}</p> <!--Formatting with filters-->
+    </div>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    </div>
 </body>
 </html>
